@@ -4,6 +4,7 @@ v 8.4.0 (unreleased)
   - The default GitLab logo now acts as a loading indicator
   - Accept 2xx status codes for successful Web hook triggers (Stan Hu)
   - Fix missing date of month in network graph when commits span a month (Stan Hu)
+  - Fix Error 500 when visiting build page of project with nil runners_token (Stan Hu)
   - Expire view caches when application settings change (e.g. Gravatar disabled) (Stan Hu)
   - Don't notify users twice if they are both project watchers and subscribers (Stan Hu)
   - Implement new UI for group page
